# DiTauEntanglement

./: .gitignore  README.md  env.yml  env_py_3p10.yml  plot_m_vis_dms.py  pyproject.toml
examples/: Nflow_example.py  reco_dummy_ditau_events_flow.py
python/: FourVecNN.py  LEP_NF_reco.py  LEP_NFmorph_reco.py  NN_tools.py  NN_tools_new.py  Nflow_example.py  ReconstructTaus.py  generate_dummy_ditau_events.py  helpers.py  reco_dummy_ditau_events.py  reco_dummy_ditau_events_flow.py  shower_events.py  trainFourVecNet.py
scripts/: compute_entanglement_variables.py  compute_spin_vars.py  cuts.f  entanglement_funcs.py  lep_nf_reco.sub  make_plots.py  mg_lep_command  mg_lep_command_dm0and1only_gammaonly  mg_lhc_command_pipi  mg_lhc_command_pipi_bsm  run_lep_nf_reco.sh  run_testing.sh  setcuts.f  shower_events.py  submit_gridpack_batch_jobs.py  submit_pythia_jobs.py  submit_testing.job
tauentanglement/config/: LEP.yaml  LHC.yaml  LHC_AllDM.yaml  LHC_HadronicOnly.yaml  LHC_MLPBaseline_HadronicOnly.yaml  LHC_MLPBaseline_SemiLeptonic.yaml  LHC_SemiLeptonic.yaml  LHC_TransformerBaseline_Hadronic.yaml  LHC_TransformerBaseline_HadronicOnly.yaml  LHC_Transformer_HadronicOnly.yaml  LHC_Transformer_HadronicOnly_OPTIMISE.yaml  LHC_Transformer_SemiLeptonic.yaml  LHC_gen.yaml  config_polvec.yaml  config_polvec_hadonly_onorm.yaml  config_polvec_semilep_onorm.yaml
tauentanglement/generation/: run_delphes.py  shower_events.py  submit_pythia_jobs_LHC.py
tauentanglement/python/: DataProcessing.py  Evaluation_Tools.py  LEP_NF_reco.py  NN_Models.py  NN_Tools.py  Plotting.py
(+84 files in other folders)
